--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html>
+  <body>
+    <h1>Speak and Listen ~Cebuano Language Voice Database~</h1>
+    <p>Press Start Recording to start recording your voice!</p>
+    <button id="download">Download</button>
+    <button id="record">Start Recording</button>
+    <button id="stop">Stop</button>
+    <audio id="audio" controls></audio>
 
-<body>
-  <h1>Speak and Listen ~Cebuano Language Voice Database~</h1>
-  <p>Press Start Recording to start recording your voice!</p>
-  <button id="download">Download</button>
-  <button id='record'>Start Recording</button>
-  <button id="stop">Stop</button>
-
-  <script src="./scripts/recorder.js">
-  </script>
-
-</body>
-
+    <script src="./scripts/recorder.js"></script>
+  </body>
 </html>
