--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,75 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <style>
+    .phrases {
+      height: 10em;
+      position: relative }
+    .phrases {
+      margin: 0;
+      background-position: 100px;
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+      font-size: 40px; }
+    .button{
+      height:20px; 
+      width:100px; 
+      margin: -20px -50px; 
+      position:relative;
+      top:50%; 
+      left:50%;
+    }
+    .audio {
+      margin: 0;
+      background-position: 100px;
+      position: absolute;
+      top: 80%;
+      left: 65%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+    }
+    .controls {
+      margin: 0;
+      background-position: 100px;
+      position: absolute;
+      top: 80%;
+      left: 35%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+    }
+    .read {
+      margin: 0;
+      background-position: 100px;
+      position: absolute;
+      top: 20%;
+      left: 30%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+    }
+
+  </style>  
+
     <title>Speak & Listen Cebuano</title>
   </head>
-  <body>
-    <h1>Speak and Listen ~Cebuano Language Voice Database~</h1>
-
-    <h2>Read this sentence:</h2>
-    <div>
+  <body onload="newSentence()">
+    <div class="read">
+      <h2>Press Start Recording to start recording your voice!</h2>
+    </div>
+    <div class="phrases">
       <p id="lineNumber" hidden></p>
       <p id="lineDisplay"></p>
+      <button class="button" onclick="newSentence()">Skip</button>
     </div>
-    <button onclick="newSentence()">Skip</button>
 
-    <p>Press Start Recording to start recording your voice!</p>
-    <button id="record">Start Recording</button>
-    <button id="stop">Stop</button>
-    <audio id="audio" controls></audio>
-    <button id="submit">Submit</button>
+    <div class="controls">
+      <button id="record">Start Recording</button>
+      <button id="stop">Stop</button>
+      <button id="submit">Submit</button>
+    </div>
+    <audio class="audio" id="audio" controls></audio>
 
     <script src="./scripts/p5.min.js"></script>
     <script src="./scripts/recorder.js"></script>
