--- a/public/speak.html
+++ b/public/speak.html
@@ -21,6 +21,7 @@
       position:relative;
       top:50%; 
       left:50%;
+      font-weight: bolder;
     }
     .audio {
       margin: 0;
@@ -52,21 +53,22 @@
 
   </style>  
 
-    <title>Speak & Listen Cebuano</title>
+    <title>Speak Cebuano</title>
   </head>
   <body onload="newSentence()">
     <div class="read">
-      <h2>Press Start Recording to start recording your voice!</h2>
+      <h2>Press Start to record your voice!</h2>
     </div>
     <div class="phrases">
       <p id="lineNumber" hidden></p>
       <p id="lineDisplay"></p>
+      <p id="english" style="font-size: 20px;"></p>
       <button class="button" onclick="newSentence()">Skip</button>
     </div>
 
     <div class="controls">
-      <button id="record">Start Recording</button>
-      <button id="stop">Stop</button>
+      <button id="record" style="border: 2px solid #4CAF50;">START</button>
+      <button id="stop" style="border: 2px solid #F44336;">STOP</button>
       <button id="submit">Submit</button>
     </div>
     <audio class="audio" id="audio" controls></audio>
