Changed some sentences

--- a/public/listen.html
+++ b/public/listen.html
@@ -57,7 +57,7 @@
   </head>
   <body onload="newSentence()">
     <div class="read">
-      <h2>Press play to validate recording!</h2>
+      <h2>Click (play button) did they accurately speak the sentence?</h2>
     </div>
     <div class="phrases">
       <p id="lineNumber" hidden></p>
