--- a/public/speak.html
+++ b/public/speak.html
@@ -57,7 +57,7 @@
   </head>
   <body onload="newSentence()">
     <div class="read">
-      <h2>Press Start to record your voice!</h2>
+      <h2>Click start then read the sentence aloud!</h2>
     </div>
     <div class="phrases">
       <p id="lineNumber" hidden></p>
