--- a/public/listen.html
+++ b/public/listen.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
-<html>
-<<<<<<< HEAD
-  <body>
-    <p id="lineNumber" hidden></p>
-    <p id="lineDisplay"></p>
-    <audio id="playFiles" controls></audio>
-    <button id="next">NEXT</button>
-  </body>
+</html>
   <script src="scripts/sentence.js"></script>
   <script src="scripts/p5.min.js"></script>
   <script src="scripts/fileFetch.js"></script>
-</html>
-=======
   <head>
     <style>
-      .phrases {
+      .body {
+        /* height: "100%";
+        width: "100%"; */
+        /* flex-direction: row-reverse;
+        background-color: aquamarine; */
+        text-align: center;
+      }
+      /* .phrases {
         height: 10em;
-        position: relative }
+        position: relative } */
       .phrases {
-        margin: 0;
-        background-position: 100px;
-        position: absolute;
-        top: 70%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-        font-size: 40px; }
-      .button{
-        height:20px; 
-        width:100px; 
-        margin: -20px -50px; 
+      }
+      /* .button{
+        height:20px;
+        width:100px;
+        margin: -20px -50px;
         position:relative;
-        top:50%; 
+        top:50%;
         left:50%;
         font-weight: bolder;
       }
@@ -52,40 +43,42 @@
         left: 35%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
-      }
+      } */ */
       .read {
-        margin: 0;
-        background-position: 100px;
-        position: absolute;
-        top: 20%;
-        left: 30%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
+        background-color: rgb(67, 131, 51);
+        text-align: center;
       }
-  
-    </style>  
+
+      #h2Text {
+        font-size: 30px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      }
+
+    </style>
 
     <title>Listen Cebuano</title>
   </head>
-  <body onload="newSentence()">
+  <body class="body">
     <div class="read">
-      <h2>Click (play button) did they accurately speak the sentence?</h2>
+      <h2 id="h2Text">Click (play button) did they accurately speak the sentence?</h2>
     </div>
+
     <div class="phrases">
       <p id="lineNumber" hidden></p>
-      <p id="lineDisplay"></p>
+      <p>Original</p>
+      <p id="lineDisplay" style="font-size: 30px; font-family:'Trebuchet MS'"></p>
+      <p>Translation</p>
       <p id="english" style="font-size: 20px;"></p>
     </div>
 
     <div class="controls">
       <button id=yes>Yes</button>
-      <button id=play>Play</button>
-      <!-- <audio class="audio" id="audio" controls></audio> -->
+      <!-- <button id="playFiles">Play</button> -->
+      <audio class="audio" id="playFiles" controls></audio>
       <button id=no>No</button>
     </div>
-    
+    <button id="next">NEXT</button>
 
-    <script src="./scripts/sentence.js"></script>
+
   </body>
 </html>
->>>>>>> 3d781884e8eb51d033f1ea2ef9e30c7725daed29
