added link to our github at developers button

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 				<footer id="footer">
 				<h1> Github: speak-listen-cebuano </h1>
 				<div class="buttons">
-					<button class="button" role="button"> Developers</button>
+					<a href="https://github.com/JoshuaVen/speak-listen-cebuano" class="button" role="button"> Developers</a>
 				</footer>
 
 		</div>
