--- a/public/listen.html
+++ b/public/listen.html
@@ -3,6 +3,8 @@
   <script src="scripts/sentence.js"></script>
   <script src="scripts/p5.min.js"></script>
   <script src="scripts/fileFetch.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <head>
     <style>
       .body {
@@ -11,6 +13,9 @@
         /* flex-direction: row-reverse;
         background-color: aquamarine; */
         text-align: center;
+        background-image: url("images/listen.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
       }
       /* .phrases {
         height: 10em;
@@ -45,13 +50,31 @@
         transform: translate(-50%, -50%);
       } */ */
       .read {
-        background-color: rgb(67, 131, 51);
         text-align: center;
       }
 
       #h2Text {
         font-size: 30px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      }
+      .btn {
+        background-color: transparent;
+        border: none;
+        padding-bottom: 10px;
+        font-size: 55px;
+      }
+      .btn:hover {
+        background-color: white;
+      }
+      .next {
+        border: 3px;
+        padding: 10px;
+        width: 150px;
+        background-color: transparent;
+        font-size: 25px;
+      }
+      .next:hover {
+        background-color: white;
       }
 
     </style>
@@ -60,7 +83,8 @@
   </head>
   <body class="body">
     <div class="read">
-      <h2 id="h2Text">Click (play button) did they accurately speak the sentence?</h2>
+      <h1 id="h2Text">Click <i class="fa fa-play-circle" style="font-size:28px"></i> </h1> 
+      <h2>Did they accurately speak the sentence?</h2>
     </div>
 
     <div class="phrases">
@@ -72,12 +96,12 @@
     </div>
 
     <div class="controls">
-      <button id=yes>Yes</button>
+      <button id=yes class="btn"> <i class="fa fa-thumbs-o-up"></i> </button>
       <!-- <button id="playFiles">Play</button> -->
       <audio class="audio" id="playFiles" controls></audio>
-      <button id=no>No</button>
+      <button id=no class="btn"> <i class="fa fa-thumbs-o-down"></i></button>
     </div>
-    <button id="next">NEXT</button>
+    <button id="next" class="next">NEXT <i class="fa fa-arrow-right" ></i> </button>
 
 
   </body>
