--- a/public/speak.html
+++ b/public/speak.html
@@ -1,61 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <style>
-    .phrases {
-      height: 10em;
-      position: relative }
-    .phrases {
-      margin: 0;
-      background-position: 100px;
-      position: absolute;
-      top: 70%;
-      left: 50%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-      font-size: 40px; }
-    .button{
-      height:20px; 
-      width:100px; 
-      margin: -20px -50px; 
-      position:relative;
-      top:50%; 
-      left:50%;
-      font-weight: bolder;
-    }
-    .audio {
-      margin: 0;
-      background-position: 100px;
-      position: absolute;
-      top: 80%;
-      left: 65%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-    }
-    .controls {
-      margin: 0;
-      background-position: 100px;
-      position: absolute;
-      top: 80%;
-      left: 35%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-    }
-    .read {
-      margin: 0;
-      background-position: 100px;
-      position: absolute;
-      top: 20%;
-      left: 30%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-    }
-
-  </style>  
-
-    <title>Speak Cebuano</title>
+      <title>Speak Cebuano</title>
+      <link rel="stylesheet" href="css/speak.css" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+      <style>
+        .body {
+          /* height: "100%";
+          width: "100%"; */
+          /* flex-direction: row-reverse;
+          background-color: aquamarine; */
+          text-align: center;
+          background-image: url("images/speak.jpg");
+          background-repeat: no-repeat;
+          background-size: cover;
+        }
+      </style>
   </head>
-  <body onload="newSentence()">
+
+  <body class="body" onload="newSentence()">
+      <div class="topnav">
+          <a class="active" href="#home">Home</a>
+          <a href="#news">Speak</a>
+          <a href="#contact">Listen</a>
+      </div>
     <div class="read">
       <h2>Click start then read the sentence aloud!</h2>
     </div>
@@ -63,14 +36,14 @@
       <p id="lineNumber" hidden></p>
       <p id="lineDisplay"></p>
       <p id="english" style="font-size: 20px;"></p>
-      <button class="button" onclick="newSentence()">Skip</button>
+      <button id="skip" onclick="newSentence()">Skip</button>
     </div>
 
     <div class="controls">
-      <button id="record" style="border: 2px solid #4CAF50;">START</button>
-      <button id="stop" style="border: 2px solid #F44336;">STOP</button>
-      <button id="submit">Submit</button>
+      <button id="record"><i style="font-size:24px" class="fa">&#xf130;</i></button>
+      <button id="stop"><i style="font-size:24px" class="fa">&#xf28d;</i></button>
     </div>
+    <button id="submit"><i style="font-size:17px" class="fa">&#xf1d9;</i> Submit </button>
     <audio class="audio" id="audio" controls></audio>
 
     <script src="./scripts/p5.min.js"></script>
