--- a/public/speak.html
+++ b/public/speak.html
@@ -16,7 +16,7 @@
           /* flex-direction: row-reverse;
           background-color: aquamarine; */
           text-align: center;
-          background-image: url("images/speak.jpg");
+          background-image: url("images/speak2.jpg");
           background-repeat: no-repeat;
           background-size: cover;
         }
