--- a/public/listen.html
+++ b/public/listen.html
@@ -13,16 +13,16 @@
         /* flex-direction: row-reverse;
         background-color: aquamarine; */
         text-align: center;
-        background-image: url("images/listen.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
+        background-image: url("images/listen1.jpeg");
+        background-repeat: no-repeat; 
+        background-size: 100%;
+      } 
       /* .phrases {
         height: 10em;
         position: relative } */
-      .phrases {
+      /*.phrases {
       }
-      /* .button{
+       .button{
         height:20px;
         width:100px;
         margin: -20px -50px;
@@ -56,6 +56,9 @@
       #h2Text {
         font-size: 30px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin-top: 115px;
+        color: black;
+        margin-left: -400px;
       }
       .btn {
         background-color: transparent;
@@ -72,19 +75,47 @@
         width: 150px;
         background-color: transparent;
         font-size: 25px;
+        margin-top: 370px;
+        color:black;
       }
       .next:hover {
         background-color: white;
       }
+      .phrases {
+        position: relative;
+        width: 45rem;
+        height: 20rem;
+        box-shadow: 0 0 2rem 0#e3e4e7;
+        background-color: rgba(201, 196, 196, 0.432);   
+        backdrop-filter: blur(15px);
+        text-align: center;
+        line-height: [heightofbox];
+        border-radius:10px;
+      }
 
+      .phrases {
+        margin: 0;
+        background-position: 100px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	      font-size: 20pt;
+        font-weight: 500;
+      }
+      .audio {
+        margin-top: 10%;
+      }
     </style>
 
     <title>Listen Cebuano</title>
   </head>
   <body class="body">
     <div class="read">
-      <h1 id="h2Text">Click <i class="fa fa-play-circle" style="font-size:28px"></i> </h1> 
-      <h2>Did they accurately speak the sentence?</h2>
+      <h1 id="h2Text">Click <i class="fa fa-play-circle" style="font-size:28px"></i>    
+        Did they accurately speak the sentence? </h1> 
     </div>
 
     <div class="phrases">
@@ -93,9 +124,6 @@
       <p id="lineDisplay" style="font-size: 30px; font-family:'Trebuchet MS'"></p>
       <p>Translation</p>
       <p id="english" style="font-size: 20px;"></p>
-    </div>
-
-    <div class="controls">
       <button id=yes class="btn"> <i class="fa fa-thumbs-o-up"></i> </button>
       <!-- <button id="playFiles">Play</button> -->
       <audio class="audio" id="playFiles" controls></audio>
