--- a/public/speak.html
+++ b/public/speak.html
@@ -16,22 +16,18 @@
           /* flex-direction: row-reverse;
           background-color: aquamarine; */
           text-align: center;
-          background-image: url("images/mic2.jpg");
+          background-image: url("images/listen4.jpeg");
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: 100%;
         }
       </style>
   </head>
 
   <body class="body" onload="newSentence()">
-      <div class="topnav">
-          <a class="active" href="#home">Home</a>
-          <a href="#news">Speak</a>
-          <a href="#contact">Listen</a>
+      <div class="read">
+        <h1 id="h2Text"> Click  <i style="font-size:24px" class="fa">&#xf130;</i>    
+         then read the sentence aloud </h1> 
       </div>
-    <div class="read">
-      <h2>Click start then read the sentence aloud!</h2>
-    </div>
     <div class="phrases">
       <p id="lineNumber" hidden></p>
       <p id="lineDisplay"></p>
