--- a/public/index.html
+++ b/public/index.html
@@ -65,18 +65,18 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 								<ul class="actions special">
-									<i class="fa fa-microphone" style="font-size:48px;color:white"></i>
+									<i class="fa fa-fw fa-microphone" style="font-size:48px;"></i>
 									<li><a href="speak.html" class="button primary"> Speak </a></li>
 								</ul>
 								</div>
 								<div class="col-4 col-12-medium">
-								<p><center>The voice of the intellect is a soft one
-								but it <br> does not rest until it has gained a hearing. <br>
-							- Sigmund Freud </center></p>
+								<h3><center>The voice of the intellect is a soft one
+								but it does not rest until it has gained a hearing. <br>
+							- Sigmund Freud </center></h3>
 								</div>
 								<div class="col-4 col-12-medium">
 								<ul class="actions special">
-									<i class="fa fa-microphone" style="font-size:48px;color:white"></i>
+									<i class="fa fa-fw fa-headphones" style="font-size:48px;"></i>
 									<li><a href="listen.html" class="button primary"> Listen </a></li>
 								</div>
 							</div>
