speak log added

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Voice Recorder</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="css/main.css" />
-		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
 
-		<!--
+<head>
+	<title>Voice Recorder</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="css/noscript.css" /></noscript>
+
+	<!--
 		<script src = "jquery.js"></script>
 		<script>
 		$(function() {
@@ -16,7 +18,7 @@
 		};
 		</script>
 		-->
-		<!--
+	<!--
 		<script src = "jquery.js"</script>
 		<script>
 		$(function() {
@@ -25,83 +27,87 @@
 		</script>
 		-->
 
-	</head>
-	<body class="is-preload landing">
-		<div id="page-wrapper">
+</head>
 
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html"></a></h1>
-					<nav id="nav">
+<body class="is-preload landing">
+	<div id="page-wrapper">
 
-						<ul>
-						<form action="#" method="post">
+		<!-- Header -->
+		<header id="header">
+			<h1 id="logo"><a href="index.html"></a></h1>
+			<nav id="nav">
+
+				<ul>
+					<form action="#" method="post">
 						<li><a href="#signup" class="button primary">Sign Up</a></li>
 						<li><a href="#login" class="button primary">Log In</a></li>
-						</ul>
-					</nav>
+				</ul>
+			</nav>
+		</header>
+
+		<!-- Banner -->
+		<section id="banner">
+			<div class="content">
+				<header>
+					<h2> Record and Listen</h2>
+					<br>
+					<p>An online voice recorder that allows <br> you
+						to record and listen to your voice </p>
+
 				</header>
+				<span class="image"><img src="images/logo1.jpg" alt="" /></span>
+			</div>
+			<a href="#one" class="goto-next scrolly">Next</a>
+		</section>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2> Record and Listen</h2>
-							<br>
-							<p>An online voice recorder that allows <br> you
-								to record and listen to your voice </p>
-
-						</header>
-						<span class="image"><img src="images/logo1.jpg" alt="" /></span>
-					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic01.jpg" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="col-4 col-12-medium">
-								<ul class="actions special">
-									<i class="fa fa-fw fa-microphone" style="font-size:48px;"></i>
-									<li><a href="speak.html" class="button primary"> Speak </a></li>
-								</ul>
-								</div>
-								<div class="col-4 col-12-medium">
-								<h3><center>The voice of the intellect is a soft one
-								but it does not rest until it has gained a hearing. <br>
-							- Sigmund Freud </center></h3>
-								</div>
-								<div class="col-4 col-12-medium">
-								<ul class="actions special">
-									<i class="fa fa-fw fa-headphones" style="font-size:48px;"></i>
-									<li><a href="listen.html" class="button primary"> Listen </a></li>
-								</div>
-							</div>
+		<!-- One -->
+		<section id="one" class="spotlight style1 bottom">
+			<span class="image fit main"><img src="images/pic01.jpg" alt="" /></span>
+			<div class="content">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-12-medium">
+							<ul class="actions special">
+								<i class="fa fa-fw fa-microphone" style="font-size:48px;"></i>
+								<li><a href="speak.html" class="button primary"> Speak </a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<h3>
+								<center>The voice of the intellect is a soft one
+									but it does not rest until it has gained a hearing. <br>
+									- Sigmund Freud </center>
+							</h3>
+						</div>
+						<div class="col-4 col-12-medium">
+							<ul class="actions special">
+								<i class="fa fa-fw fa-headphones" style="font-size:48px;"></i>
+								<li><a href="listen.html" class="button primary"> Listen </a></li>
 						</div>
 					</div>
-				</section>
+				</div>
+			</div>
+		</section>
 
-			<!-- Footer -->
-				<footer id="footer">
-				<h1> Github: speak-listen-cebuano </h1>
-				<div class="buttons">
-					<a href="https://github.com/JoshuaVen/speak-listen-cebuano" class="button" role="button"> Developers</a>
-				</footer>
+		<!-- Footer -->
+		<footer id="footer">
+			<h1> Github: speak-listen-cebuano </h1>
+			<div class="buttons">
+				<a href="https://github.com/JoshuaVen/speak-listen-cebuano" class="button" role="button"> Developers</a>
+		</footer>
 
-		</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="js/jquery.min.js"></script>
-			<script src="js/jquery.scrolly.min.js"></script>
-			<script src="js/jquery.dropotron.min.js"></script>
-			<script src="js/jquery.scrollex.min.js"></script>
-			<script src="js/browser.min.js"></script>
-			<script src="js/breakpoints.min.js"></script>
-			<script src="js/util.js"></script>
-			<script src="js/main.js"></script>
+	<!-- Scripts -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.scrolly.min.js"></script>
+	<script src="js/jquery.dropotron.min.js"></script>
+	<script src="js/jquery.scrollex.min.js"></script>
+	<script src="js/browser.min.js"></script>
+	<script src="js/breakpoints.min.js"></script>
+	<script src="js/util.js"></script>
+	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
