fixed sentence loading issues, added listen logs

--- a/public/listen.html
+++ b/public/listen.html
@@ -4,7 +4,6 @@
 <script src="scripts/sentence.js"></script>
 <script src="scripts/p5.min.js"></script>
 <script src="scripts/fileFetch.js"></script>
-<script src="scripts/listen.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/navbar.css" />
@@ -124,9 +123,10 @@
   <title>Listen Cebuano</title>
 </head>
 
-<body id='listenbody' onload="logListen()" class="body">
+<body id='listenbody' onload="logToServer('info', 'Accessing listen service')" class="body">
   <div class="navbar">
-    <a href="index.html"><i class="fa fa-arrow-left"></i> Home</a>
+    <a href="index.html"><i class="fa fa-arrow-left"></i>
+      Home</a>
   </div>
 
   <div class="read">
